sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:3: error: not found: value lgr
  var ecart = lgr;
              ^AlgCombSort:9: error: not found: value i
    i = 0;
    ^AlgCombSort:10: error: not found: value i
    while (i+ecart < lgr) {
           ^AlgCombSort:10: error: not found: value lgr
    while (i+ecart < lgr) {
                     ^AlgCombSort:11: error: not found: value i
      if (isSmaller(i, i+ecart)) {
                    ^AlgCombSort:11: error: not found: value i
      if (isSmaller(i, i+ecart)) {
                       ^AlgCombSort:12: error: not found: value i
        swap(i, i+ecart);
             ^AlgCombSort:12: error: not found: value i
        swap(i, i+ecart);
                ^AlgCombSort:14: error: not found: value i
        i += 1;
        ^